[tool.poetry]
name = "+"
version = "0.1.0"
description = ""
authors = ["Nico Krätschmer <kraetschmerni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
yt-dlp = "^2024.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
